--- a/tshop/.vscode/settings.json
+++ b/tshop/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.linting.pylintEnabled": false
+    "python.linting.pylintEnabled": false,
+    "python.pythonPath": "env\\Scripts\\python.exe"
 }
